--- a/sections/1_introduction.tex
+++ b/sections/1_introduction.tex
@@ -1,18 +1,16 @@
-Differences in gender are central features of economic and social life. This paper investigates how participation in enriched early childhood programs differentially affects the lives of disadvantaged boys and girls, and whether it promotes or reduces gender gaps. We show that, on many outcomes, lower-quality childcare programs harm boys and contribute to gender gaps. This analysis sounds a cautionary note for advocates of early childcare in any form. Quality matters and low-quality programs can cause harm.
+Differences in gender are central features of economic and social life. This paper investigates how participation in enriched early childhood programs differentially affects the lives of disadvantaged boys and girls, and whether it promotes or reduces gender gaps. In addition, we study the effect of these gender gaps considering different levels of quality. We show that, on many outcomes, boys are more susceptible to lower-quality alternatives to enriched early childhood education, which contributes to the observed reversals in boy-girl gender gaps. 
 
 Many studies across disciplines point to the greater vulnerability of boys to adverse life conditions from a combination of psychological, biological, and social factors.\footnote{See \citet{Golding_Fitzgerald_2017_IMHJ} for a review of recent work.} As a group, girls mature earlier, are more resilient to adversity, and perform better in a variety of life tasks.\footnote{See \citet{Schore_2017_IMHJ} for an informative overview of this literature. Economists have also contributed to this literature. See, e.g., \citet{Bertrand_Pan_2013_AEJAE}, \citet{Kottelenberg_Lehrer_2014_Gender-Effects}, and \citet{Autor-etal_2015_Family-Disadvantage}.} Less is known about effective strategies for reducing or compensating for the vulnerability of boys to disadvantage.
 
-Many studies have shown the benefits of early-life interventions for improving the skills of children, especially those from disadvantaged families.\footnote{\citet{Currie_2011_AER,Elango_Hojman_etal_2016_Early-Edu}.} Although several of these studies report effects by gender, most do not.\footnote{We survey the literature in Appendix~\ref{appendix:gdiff-survey}. See \citet{Elango_Hojman_etal_2016_Early-Edu} for a discussion of the main findings from the literature on early childhood education. Not reporting gender differences is common. Some examples include \citet{Bernal_Keane_2011_JoLE,Cascio_Schanzenbach_2013_ImpactsExpandingAccess,Bitler_et_al_2014_Head_Start_Unpublished,Kline_Walters_2016_QJE}. There are some exceptions: \citet{Heckman_Moon_etal_2010_QE,Campbell_Conti_etal_2014_EarlyChildhoodInvestments,Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}.} Pooling males and females ignores potentially large differences in treatment effects.
+Many studies have shown the benefits of early-life interventions for improving the skills of children, especially those from disadvantaged families \citep{Currie_2011_AER,Elango_Hojman_etal_2016_Early-Edu}. Although several of these studies report effects by gender, most do not. Some examples include \citet{Bernal_Keane_2011_JoLE,Cascio_Schanzenbach_2013_ImpactsExpandingAccess,Bitler_et_al_2014_Head_Start_Unpublished,Kline_Walters_2016_QJE}. There are some exceptions \citep{Heckman_Moon_etal_2010_QE,Campbell_Conti_etal_2014_EarlyChildhoodInvestments,Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}. Pooling males and females ignores potentially large differences in treatment effects.\footnote{We survey the literature more extensively in Appendix~\ref{appendix:gdiff-survey}.}
 
-This paper investigates this issue using data from a randomized controlled trial of a prototypical intensive early childhood program that enriched the early lives of disadvantaged children. The data come from the Carolina Abecedarian Project (ABC) and its almost identical sister program, the Carolina Approach to Responsive Education (CARE). These programs were conducted in Chapel Hill, North Carolina for a sample of children born between 1972 and 1980. In this paper, we refer to the combined programs by the acronym ABC/CARE. It is a template for many current and proposed early interventions.\footnote{Programs inspired by ABC/CARE have been (and are currently being) launched around the world. \citet{Sparling_2010_Highlights} and \citet{Ramey_Ramey_Lanzi_2014_Interventions} list numerous programs based on the ABC/CARE approach. The programs are: IHDP---eight different cities around the U.S. \citep{Spiker-etal_1997_Helping}; Early Head Start and Head Start in the U.S. \citep{Schneider_McDonald-eds_2007_Scale-Up_Vol-1}; John's Hopkins Cerebral Palsy Study in the U.S. \citep{Sparling_2010_Highlights}; Classroom Literacy Interventions and Outcomes (CLIO) study in the U.S. \citep{Sparling_2010_Highlights}; Massachusetts Family Child Care Study \citep{Collins_etal_2010_Massachusetts-Study}; Healthy Child Manitoba Evaluation \citep{Healthy_Child_Manitoba_2015_Starting-Early}; Abecedarian Approach within an Innovative Implementation Framework \citep{Jensen_Nielsen_2016_ABC-Programme-Pilot}; and Building a Bridge into Preschool in Remote Northern Territory Communities in Australia \citep{UMonash_Dataset_2015_URL}. Educare programs are also based on ABC/CARE \citep{Educare_2014_Research_Agenda,Yazejian_Bryant_2012_Educare}.} It started at 8 weeks of age and continued through age 5. Treatment and control subjects were followed through their mid 30s, with data collected on multiple dimensions of human development.
+This paper investigates this issue using data from a randomized controlled trial of a prototypical intensive early childhood program that enriched the early lives of disadvantaged children. The data come from the Carolina Abecedarian Project (ABC) and its almost identical sister program, the Carolina Approach to Responsive Education (CARE). These programs were conducted in Chapel Hill, North Carolina for a sample of children born between 1972 and 1980. In this paper, we refer to the combined programs by the acronym ABC/CARE. It was one of the pioneer programs that focused intensively on child-led learning and is a template for many current and proposed early interventions.\footnote{Programs inspired by ABC/CARE have been (and are currently being) launched around the world. \citet{Sparling_2010_Highlights} and \citet{Ramey_Ramey_Lanzi_2014_Interventions} list numerous programs based on the ABC/CARE approach. The programs are: IHDP---eight different cities around the U.S. \citep{Spiker-etal_1997_Helping}; Early Head Start and Head Start in the U.S. \citep{Schneider_McDonald-eds_2007_Scale-Up_Vol-1}; John's Hopkins Cerebral Palsy Study in the U.S. \citep{Sparling_2010_Highlights}; Classroom Literacy Interventions and Outcomes (CLIO) study in the U.S. \citep{Sparling_2010_Highlights}; Massachusetts Family Child Care Study \citep{Collins_etal_2010_Massachusetts-Study}; Healthy Child Manitoba Evaluation \citep{Healthy_Child_Manitoba_2015_Starting-Early}; Abecedarian Approach within an Innovative Implementation Framework \citep{Jensen_Nielsen_2016_ABC-Programme-Pilot}; and Building a Bridge into Preschool in Remote Northern Territory Communities in Australia \citep{UMonash_Dataset_2015_URL}. Educare programs are also based on ABC/CARE \citep{Educare_2014_Research_Agenda,Yazejian_Bryant_2012_Educare}.} It started at 8 weeks of age and continued through age 5. Treatment and control subjects were followed through their mid 30s, with data collected on multiple dimensions of human development \citep{Ramey_Campbell_1991_childreninpoverty}. 
 
-There are positive impacts of the program across the life cycle for both genders. However, there are substantial differences in impacts by gender across domains. The program differentially promotes the labor income, employment, and health of males and reduces their participation in crime. It differentially enhances the cognition, achievement, and educational attainment of girls. Boys placed in childcare benefit relatively more than girls from participation in high-quality center-based care compared to lower-quality center-based care.
+There are positive impacts of the program across the life cycle for both genders.\footnote{Previous studies presenting treatment effects of ABC and CARE include \citet{Ramey_etal_1985_Project-CARE_TiECSE,Clarke_Campbell_1998_ABC_Comparison_ECRQ,Campbell_Pungello_etal_2001_DP,Campbell_Ramey_etal_2002_ADS,Campbell_Wasik_etal_2008_ECRQ,Campbell_Conti_etal_2014_EarlyChildhoodInvestments}.} However, there are substantial differences in impacts by gender across domains. The program promotes the labor income, employment, and health of males and reduces their participation in crime, while it enhances the cognition, achievement, and educational attainment of girls. While all the treatment-group subjects attended the center-based care, the experiences of the control-group subjects varied with 75\% enrolling in alternative center-based options. Historical documentation, records, and evidence from knowledgeable individuals indicate that although the available alternative centers followed state and federal standards, they were of considerably lower quality than the ABC/CARE program.\footnote{We document this in Appendix~\ref{app:control-subbb}.} We analyze the marginal benefit of ABC/CARE relative to this lower-quality center-based care. Boys in ABC/CARE benefit relatively more than girls from participation in high-quality center-based care compared to lower-quality center-based care.
 
-Our analysis sheds light on recent claims about the harm caused by enrolling children in childcare programs. In an influential analysis, \citet{Baker_Gruber_etal_2008_JPE} show that participants in childcare manifest adverse behavioral outcomes. \citet{Kottelenberg_Lehrer_2014_Gender-Effects} localize their effects to boys.
+Our analysis responds to recent claims about the harm caused by enrolling children in center-based infant care and preschool. In an influential analysis, \citet{Baker_Gruber_etal_2008_JPE} show that participants in childcare manifest adverse behavioral outcomes. \citet{Kottelenberg_Lehrer_2014_Gender-Effects} find a similar result but localized to boys.  The program analyzed by \citet{Baker_Gruber_Milligan_2015_Noncog_Defects} and \citet{Kottelenberg_Lehrer_2014_Gender-Effects} is of relatively low quality compared to the enriched program we analyze.\footnote{The program they analyze was a modest payment (between 5 and 7 Canadian dollars a day starting in 1997) in the form of a voucher. The voucher component itself implies a reduction in the quality of the received program given an information problem by parents. The full cost of the program was \$44 (2014) a day \citep{Baker_etal_2005_Universal_Childcare_NBER}. This is less than two thirds of the cost of ABC/CARE, which was close to \$75 (2014) a day \citep{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}.} However, not all childcare programs are alike. We produce evidence that high-quality childcare greatly benefits boys relative to lower-quality childcare. Staying at home is a better option for them, especially if the family environment is relatively advantaged. This effect is not found for girls. There is no contradiction between the claim that lower-quality programs impair child development, while high-quality programs do not. This analysis sounds a cautionary note for advocates of early childcare in any form: quality matters and low-quality programs can cause harm.
 
-However, not all childcare programs are alike. We produce evidence that high-quality childcare greatly benefits boys relative to lower-quality childcare. Staying at home is a better option for them, especially if the family environment is relatively advantaged (e.g., the father is present). This effect is not found for girls. The program analyzed by \citet{Baker_Gruber_Milligan_2015_Noncog_Defects} and \citet{Kottelenberg_Lehrer_2014_Gender-Effects} is of relatively low quality compared to the enriched program we analyze.\footnote{The program they analyze was a modest payment (between 5 and 7 Canadian dollars a day starting in 1997) in the form of a voucher. The voucher component itself reduces received quality given an information problem by parents. The full cost of the program was \$44 (2014) a day \citep{Baker_etal_2005_Universal_Childcare_NBER}. This is less than two thirds of the cost of ABC/CARE, which was close to \$75 (2014) a day \citep{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}.} There is no contradiction between the claim that lower-quality programs impair child development, while high-quality programs do not. 
-
-Unlike previous studies, we estimate treatment effects comparing the treatment group to different control groups: subjects who received home care or care in centers of lower quality then ABC/CARE.\footnote{Historical documentation, records, and evidence from knowledgeable individuals indicate that although the available alternative centers followed state and federal standards, they were of considerably lower quality than the ABC/CARE program. We document this in Appendix~\ref{app:control-subbb}.}$^,$\footnote{Previous studies presenting treatment effects of ABC and CARE include \citet{Ramey_etal_1985_Project-CARE_TiECSE,Clarke_Campbell_1998_ABC_Comparison_ECRQ,Campbell_Pungello_etal_2001_DP,Campbell_Ramey_etal_2002_ADS,Campbell_Wasik_etal_2008_ECRQ,Campbell_Conti_etal_2014_EarlyChildhoodInvestments}.} We find that home care is beneficial for boys compared to low-quality center childcare.
+Unlike previous studies, we estimate treatment effects comparing the treatment group to different control groups: subjects who received home care or care in centers of lower quality then ABC/CARE. We find that home care is beneficial for boys compared to low-quality center childcare.
 
 To preview our analysis, we present gender differences in outcomes in Table~\ref{tab:proportion-table-ranksign}. We report the proportion of outcomes, by category, for which males outperform females (we have multiple outcome measures in each category which we explain in greater detail below). These proportions are invariant to the scales used for individual measures. Under the null hypothesis of no difference in treatment effects by gender, the proportion of outcomes favoring any gender should be 50\%. We test this hypothesis for the control group and the treatment group separately to determine whether there is a baseline (control) gender difference and whether treatment affects this gender difference.
 
