--- a/sections/4_treatment-effects.tex
+++ b/sections/4_treatment-effects.tex
@@ -2,9 +2,9 @@ This section reports estimates of treatment effects by gender for the main outco
 
 \subsection{Estimated Treatment Effects}
 
-Tables~\ref{table:tescombinedmales} and \ref{table:tescombinedfemales} present estimates of a representative selection of treatment effects for males and females respectively. The full list of treatment effects is reported in Appendix~\ref{appendix:results}. Column (1) of each table gives sample mean differences in outcomes between treatment and control groups. Column (2) adjusts the differences for attrition and controls for background variables. Both are estimates of the parameter defined in equation~\eqref{eq:effect}, but with different conditioning sets. Column (3) shows the mean difference between the full treatment-group and the control-group subjects who stay at home. Column (4) gives matching estimates for the parameter defined in equation~\eqref{eq:influenza}.\footnote{In Appendix~\ref{app:matching-is-fun}, we provide details on: (i) the kernel matching estimator that we use; (ii) the matching variables that we use; and (iii) a sensitivity analysis to these matching variables.} Column (5) reports estimates of the parameter defined by equation~\eqref{eq:smallpox}: mean differences between the treatment-group and control-group children who attended alternatives. Column (6) gives matching estimates for the parameter of equation~\eqref{eq:smallpox}.\footnote{We want to clarify one set of variables: those related to parental income. There are some considerations that contribute to the higher parental income at the later ages. One consideration is that the variables are asked differently, with the question at age 3.5 using categories. These categories end at greater than \$14,000, which truncates the distribution. Although we fill this out using a tobit model, we cannot fully impute these higher incomes. The other consideration is that the mothers are very young, with many being enrolled in school at the child's birth. Once the children are 8, more mothers have entered the workforce which in turn increases the reported income.}
+Tables~\ref{table:tescombinedmales} and \ref{table:tescombinedfemales} present estimates and bootstrapped $p$-values of a representative selection of treatment effects for males and females respectively. The full list of treatment effects is reported in Appendix~\ref{appendix:results}. Column (1) of each table gives sample mean differences in outcomes between treatment and control groups. Column (2) adjusts the differences for attrition and controls for background variables. Both are estimates of the parameter defined in equation~\eqref{eq:effect}, but with different conditioning sets. Column (3) shows the mean difference between the full treatment-group and the control-group subjects who stay at home. Column (4) gives matching estimates for the parameter defined in equation~\eqref{eq:influenza}.\footnote{In Appendix~\ref{app:matching-is-fun}, we provide details on: (i) the kernel matching estimator that we use; (ii) the matching variables that we use; and (iii) a sensitivity analysis to these matching variables.} Column (5) reports estimates of the parameter defined by equation~\eqref{eq:smallpox}: mean differences between the treatment-group and control-group children who attended alternatives. Column (6) gives matching estimates for the parameter of equation~\eqref{eq:smallpox}.\footnote{We want to clarify one set of variables: those related to parental income. There are some considerations that contribute to the higher parental income at the later ages. One consideration is that the variables are asked differently, with the question at age 3.5 using categories. These categories end at greater than \$14,000, which truncates the distribution. Although we fill this out using a tobit model, we cannot fully impute these higher incomes. The other consideration is that the mothers are very young, with many being enrolled in school at the child's birth. Once the children are 8, more mothers have entered the workforce which in turn increases the reported income.}
 
-The results for females show that ABC/CARE has substantial effects on education when comparing outcomes of the treatment-group subjects to those from the next best alternative. High school graduation increases between 13 and 25 percentage points, depending on which estimate we consider; high school graduation increases 13 percentage points; and the average years of schooling increase between 1.8 and 2.1 years. Employment at age 30 increases between 8 and 13 percentage points. ABC/CARE has substantial impacts on human capital accumulation and employment. The results strengthen when we compare treatment outcomes with outcomes for those who remain at home.
+The results for females show that ABC/CARE has substantial effects on education when comparing outcomes of the treatment-group subjects to those from the next best alternative. High school graduation increases between 13 and 25 percentage points, depending on which estimate we consider; high school graduation increases 13 percentage points; and the average years of schooling increase between 1.8 and 2.1 years. Employment at age 30 increases between 8 and 13 percentage points. ABC/CARE has substantial impacts on human capital accumulation and employment. The results strengthen when we compare treatment outcomes with outcomes for those who remain at home.\footnote{Due to the small sample size, we use the convention of inference at the 10\% level.}
 
 \begin{sidewaystable}[!htbp]
 \centering
@@ -43,7 +43,7 @@ The results hold when using other definitions of control substitution, which var
 
 The estimated effects for females and males in Columns (3) and (5) in their respective tables are not based on adjustments for baseline covariates (matching); the estimates in (4) and (6) are. In Appendix~\ref{appendix:bvariables}, we justify our choice of matching variables. We conduct a thorough analysis to conclude that there is little sensitivity to the choice of these variables.\footnote{We also present this sensitivity analysis changing the variables used to condition while estimating treatment effects and changing the variables used to construct the weights to account for attrition.}
 
-We also test whether estimated treatment effects are equal across genders. Table~\ref{table:genderdifference-tes} reports differences between males and females in the control and treatment groups across major categories of outcomes. Within each category there are multiple measures. Using the Wilcoxon signed-rank test, we reject equality of the distributions of the treatment and control groups.\footnote{We explain the procedure in its entirety in Appendix~\ref{little-gdiff-tes}. In summary, we bootstrap with replacement 1,000 times. For bootstrap $b \in [1, \ldots, 1,000]$ we compute the treatment effect for males, $T_{M,b}$, and females, $T_{F,b}$. These treatment effects represent a pair $(T_{M,b}, T_{F,b})$. Over the distribution of these pairs, we compute the Wilcoxon signed-rank test, which compares the empirical distribution of the treatment effects for males to the empirical distribution of the treatment effects for females. We repeat this procedure for each outcome.} The general pattern is that male results are stronger than female results in the control group. The pattern is generally reversed in the treatment group. The results are robust to adjustments for multiple hypothesis testing. Similar results emerge when we use a more complete set of outcomes (see Appendix~\ref{appendix:gdiff-tes}).
+We also test whether estimated treatment effects are equal across genders. Table~\ref{table:genderdifference-tes} reports differences between males and females in the control and treatment groups across major categories of outcomes. Within each category there are multiple measures. Using the Wilcoxon signed-rank test, we reject equality of the distributions of the treatment and control groups.\footnote{We explain the procedure in its entirety in Appendix~\ref{little-gdiff-tes}. In summary, we bootstrap with replacement 1,000 times. For bootstrap $b \in [1, \ldots, 1,000]$ we compute the treatment effect for males, $T_{M,b}$, and females, $T_{F,b}$. These treatment effects represent a pair $(T_{M,b}, T_{F,b})$. Over the distribution of these pairs, we compute the Wilcoxon signed-rank test, which compares the empirical distribution of the treatment effects for males to the empirical distribution of the treatment effects for females. We repeat this procedure for each outcome.} The general pattern is that male outcomes are stronger than female outcomes in the control group. The pattern is generally reversed in the treatment group. The results are robust to adjustments for multiple hypothesis testing. Similar results emerge when we use a more complete set of outcomes (see Appendix~\ref{appendix:gdiff-tes}).
 
 \begin{sidewaystable}[!htbp]
 \centering
@@ -63,7 +63,7 @@ Note: This table reproduces the control-group means and estimated treatment effe
 
 We consider a total of 126 outcomes reported in Appendix~\ref{appendix:gdiff-tes}. Measures of cognitive, social-emotional, and parenting skills were collected during the intervention or while the subjects were in school. The researchers collected information on the subjects' academic performance including grade retention and special education. The adult surveys (at ages 21 and 30) cover items related to employment, post-secondary education, health, criminal activity, and family structure. When the subjects were in their mid 30s, the researchers collected administrative crime data and data from a full medical survey.
 
-Given the large number of outcomes measured in the numerous follow-ups, reporting all treatment effects would overwhelm the reader. A companion paper, \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}, aggregates treatment effects by monetizing benefits and constructing lifetime profiles of outcomes to conduct cost/benefit and rate of return analyses. The benefits from ABC/CARE are largely driven by its effects on males. The mean benefit/cost ratio is 10.19 for males and 2.61 for females with a range of estimates all bounded above 1.
+Given the large number of outcomes measured in the numerous follow-ups, reporting all treatment effects would overwhelm the reader. A companion paper, \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}, aggregates treatment effects by monetizing benefits and constructing lifetime profiles of outcomes to conduct cost/benefit and rate of return analyses. The monetary benefits from ABC/CARE are largely driven by its effects on males. The mean benefit/cost ratio is 10.19 for males and 2.61 for females with a range of estimates all bounded above 1.
 
 In this section, we report treatment effects by category and the proportion of statistically significant effects. We use combining functions, which count the number of positive (and significant) treatment effects by gender. We adjust for dependence across outcomes and for pretesting in constructing standard errors (see Appendix~\ref{appendix:methodology}). The combining functions indicate that females benefit in a larger number of outcomes   than do males, in the sense that there are more outcomes across multiple domains for which female treatments benefit relative to female controls. However, as shown in \cite{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}, when monetizing these treatment effects, the program provides a greater social, monetary benefit for boys in part because it reduces costly criminal activity. This pair of conclusions indicates that the outcomes for which women are positively affected relative to men may be harder to monetize.  
 
