--- a/sections/1_introduction.tex
+++ b/sections/1_introduction.tex
@@ -1,47 +1,30 @@
 Differences in gender are central features of economic and social life. This paper investigates how participation in enriched early childhood programs differentially affects the lives of disadvantaged boys and girls, and whether it promotes or reduces gender gaps. In addition, we study the effect of these gender gaps considering different levels of quality. We show that, on many outcomes, boys are more susceptible to lower-quality alternatives to enriched early childhood education, which contributes to the observed reversals in boy-girl gender gaps. 
 
-Many studies across disciplines point to the greater vulnerability of boys to adverse life conditions from a combination of psychological, biological, and social factors.\footnote{See \citet{Golding_Fitzgerald_2017_IMHJ} for a review of recent work.} As a group, girls mature earlier, are more resilient to adversity, and perform better in a variety of life tasks.\footnote{See \citet{Schore_2017_IMHJ} for an informative overview of this literature. Economists have also contributed to this literature. See, e.g., \citet{Bertrand_Pan_2013_AEJAE}, \citet{Kottelenberg_Lehrer_2014_Gender-Effects}, and \citet{Autor-etal_2015_Family-Disadvantage}.} Less is known about effective strategies for reducing or compensating for the vulnerability of boys to disadvantage.
+Many studies across disciplines point to the greater vulnerability of boys to adverse life conditions from a combination of psychological, biological, and social factors.\footnote{See \citet{Golding_Fitzgerald_2017_IMHJ} for a review of recent work.} As a group, girls mature earlier, are more resilient to adversity, and perform better in a variety of life tasks.See \citet{Eliot_Brain_2009_BOOKSchore_2017_IMHJ} for an informative overview of this literature. Economists have also contributed to this literature. See, e.g., \citet{Bertrand_Pan_2013_AEJAE}, \citet{Kottelenberg_Lehrer_2014_Gender-Effects}, and \citet{Autor-etal_2015_Family-Disadvantage}. These studies support the hypothesis that early deficits in boys compound during skill formation resulting in large differences between later male and female outcomes. Less is known about effective strategies for reducing or compensating for the vulnerability of boys to disadvantage.
 
-Many studies have shown the benefits of early-life interventions for improving the skills of children, especially those from disadvantaged families \citep{Currie_2011_AER,Elango_Hojman_etal_2016_Early-Edu}. Although several of these studies report effects by gender, most do not. Some examples include \citet{Bernal_Keane_2011_JoLE,Cascio_Schanzenbach_2013_ImpactsExpandingAccess,Bitler_et_al_2014_Head_Start_Unpublished,Kline_Walters_2016_QJE}. There are some exceptions \citep{Heckman_Moon_etal_2010_QE,Campbell_Conti_etal_2014_EarlyChildhoodInvestments,Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}. Pooling males and females ignores potentially large differences in treatment effects.\footnote{We survey the literature more extensively in Appendix~\ref{appendix:gdiff-survey}.}
+Many studies have shown the benefits of early-life interventions for improving the skills of children, especially those from disadvantaged families \citep{Currie_2011_AER,Elango_Hojman_etal_2016_Early-Edu}. Although several of these studies report effects by gender, most do not. Some examples include \citet{Bernal_Keane_2011_JoLE,Cascio_Schanzenbach_2013_ImpactsExpandingAccess,Bitler_et_al_2014_Head_Start_Unpublished,Kline_Walters_2016_QJE}. There are some exceptions \citep{Anderson_2008_JASA,Heckman_Moon_etal_2010_QE,Campbell_Conti_etal_2014_EarlyChildhoodInvestments,Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}.\footnote{Although \citet{Anderson_2008_JASA} provides estimates of factors for ABC that combine many outcomes into a condensed summary measure, the data he uses is not current with important health, survey, and administrative data being collected from the ABC sample after age 21 result in different trends than what he reports. The most glaring example of this is crime outcomes, whose treatment effects are not significant until after age 21 in ABC.} These studies generally find that men benefit more in health and employment outcomes while women benefit more in education outcomes. This paper finds similar results, but presents novel analysis comparing alternative care settings by gender. Pooling males and females ignores potentially large differences in treatment effects.\footnote{We survey the literature more extensively in Appendix~\ref{appendix:gdiff-survey}.} 
 
 This paper investigates this issue using data from a randomized controlled trial of a prototypical intensive early childhood program that enriched the early lives of disadvantaged children. The data come from the Carolina Abecedarian Project (ABC) and its almost identical sister program, the Carolina Approach to Responsive Education (CARE). These programs were conducted in Chapel Hill, North Carolina for a sample of children born between 1972 and 1980. In this paper, we refer to the combined programs by the acronym ABC/CARE. It was one of the pioneer programs that focused intensively on child-led learning and is a template for many current and proposed early interventions.\footnote{Programs inspired by ABC/CARE have been (and are currently being) launched around the world. \citet{Sparling_2010_Highlights} and \citet{Ramey_Ramey_Lanzi_2014_Interventions} list numerous programs based on the ABC/CARE approach. The programs are: IHDP---eight different cities around the U.S. \citep{Spiker-etal_1997_Helping}; Early Head Start and Head Start in the U.S. \citep{Schneider_McDonald-eds_2007_Scale-Up_Vol-1}; John's Hopkins Cerebral Palsy Study in the U.S. \citep{Sparling_2010_Highlights}; Classroom Literacy Interventions and Outcomes (CLIO) study in the U.S. \citep{Sparling_2010_Highlights}; Massachusetts Family Child Care Study \citep{Collins_etal_2010_Massachusetts-Study}; Healthy Child Manitoba Evaluation \citep{Healthy_Child_Manitoba_2015_Starting-Early}; Abecedarian Approach within an Innovative Implementation Framework \citep{Jensen_Nielsen_2016_ABC-Programme-Pilot}; and Building a Bridge into Preschool in Remote Northern Territory Communities in Australia \citep{UMonash_Dataset_2015_URL}. Educare programs are also based on ABC/CARE \citep{Educare_2014_Research_Agenda,Yazejian_Bryant_2012_Educare}.} It started at 8 weeks of age and continued through age 5. Treatment and control subjects were followed through their mid 30s, with data collected on multiple dimensions of human development \citep{Ramey_Campbell_1991_childreninpoverty}. 
 
 There are positive impacts of the program across the life cycle for both genders.\footnote{Previous studies presenting treatment effects of ABC and CARE include \citet{Ramey_etal_1985_Project-CARE_TiECSE,Clarke_Campbell_1998_ABC_Comparison_ECRQ,Campbell_Pungello_etal_2001_DP,Campbell_Ramey_etal_2002_ADS,Campbell_Wasik_etal_2008_ECRQ,Campbell_Conti_etal_2014_EarlyChildhoodInvestments}.} However, there are substantial differences in impacts by gender across domains. The program promotes the labor income, employment, and health of males and reduces their participation in crime, while it enhances the cognition, achievement, and educational attainment of girls. While all the treatment-group subjects attended the center-based care, the experiences of the control-group subjects varied with 75\% enrolling in alternative center-based options. Historical documentation, records, and evidence from knowledgeable individuals indicate that although the available alternative centers followed state and federal standards, they were of considerably lower quality than the ABC/CARE program.\footnote{We document this in Appendix~\ref{app:control-subbb}.} We analyze the marginal benefit of ABC/CARE relative to this lower-quality center-based care. Boys in ABC/CARE benefit relatively more than girls from participation in high-quality center-based care compared to lower-quality center-based care.
 
-Our analysis responds to recent claims about the harm caused by enrolling children in center-based infant care and preschool. In an influential analysis, \citet{Baker_Gruber_etal_2008_JPE} show that participants in childcare manifest adverse behavioral outcomes. \citet{Kottelenberg_Lehrer_2014_Gender-Effects} find a similar result but localized to boys.  The program analyzed by \citet{Baker_Gruber_Milligan_2015_Noncog_Defects} and \citet{Kottelenberg_Lehrer_2014_Gender-Effects} is of relatively low quality compared to the enriched program we analyze.\footnote{The program they analyze was a modest payment (between 5 and 7 Canadian dollars a day starting in 1997) in the form of a voucher. The voucher component itself implies a reduction in the quality of the received program given an information problem by parents. The full cost of the program was \$44 (2014) a day \citep{Baker_etal_2005_Universal_Childcare_NBER}. This is less than two thirds of the cost of ABC/CARE, which was close to \$75 (2014) a day \citep{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}.} However, not all childcare programs are alike. We produce evidence that high-quality childcare greatly benefits boys relative to lower-quality childcare. Staying at home is a better option for them, especially if the family environment is relatively advantaged. This effect is not found for girls. There is no contradiction between the claim that lower-quality programs impair child development, while high-quality programs do not. This analysis sounds a cautionary note for advocates of early childcare in any form: quality matters and low-quality programs can cause harm.
+Our analysis responds to recent claims about the harm caused by enrolling children in center-based infant care and preschool. In an influential analysis, \citet{Baker_Gruber_etal_2008_JPE} show that participants in childcare manifest adverse behavioral outcomes. \citet{Kottelenberg_Lehrer_2014_Gender-Effects} find a similar result but localized to boys.  The program analyzed by \citet{Baker_Gruber_Milligan_2015_Noncog_Defects} and \citet{Kottelenberg_Lehrer_2014_Gender-Effects} is of relatively low quality compared to the enriched program we analyze.\footnote{The program they analyze was a modest payment (between 5 and 7 Canadian dollars a day starting in 1997) in the form of a voucher. The voucher component itself implies a reduction in the quality of the received program given an information problem by parents. The full cost of the program was \$44 (2014) a day \citep{Baker_etal_2005_Universal_Childcare_NBER}. This is less than two thirds of the cost of ABC/CARE, which was close to \$75 (2014) a day \citep{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}.} However, not all childcare programs are alike. We produce evidence that high-quality childcare greatly benefits boys relative to lower-quality childcare. Staying at home is a better option for them. This effect is not found for girls. There is no contradiction between the claim that lower-quality programs impair child development, while high-quality programs do not. This analysis sounds a cautionary note for advocates of early childcare in any form: quality matters and low-quality programs can cause harm. It also helps further the results to a modern context in which many more children are enrolled in preschool programs: in 2016, an estimated 42\% of 3-year-olds, 66\% of 4-year-olds, and 86\% of 5-year-olds were enrolled in preschool programs.
 
-Unlike previous studies, we estimate treatment effects comparing the treatment group to different control groups: subjects who received home care or care in centers of lower quality then ABC/CARE. We find that home care is beneficial for boys compared to low-quality center childcare.
+Unlike previous studies, we estimate treatment effects comparing the treatment group to different control groups: subjects who received home care or care in centers of lower quality then ABC/CARE. Other papers study early childhood education comparing the treatment group to alternative options. An example includes \citet{Feller_Grindal_etal_2016_ComparedtoWhat,Kline_Walters_2016_QJE}, both of which analyze Head Start using the multi-site randomized Head Start Impact Study (HSIS). However, the multi-site nature of HSIS allows for the use of weakly exogenous instruments or stratification. In a small and largely homogenous sample like ABC/CARE, this type of analysis is not possible. Using matching methods, we are able to communicate estimates of the treatment effects of ABC/CARE relative to the relevant counterfactuals. Under certain assumptions, these estimates can be treated causally, although we qualify that the inference of these estimates is not exactly comparable to analyzing the treatment group in comparison to the full control group. With those qualifications, we find that home care is beneficial for boys compared to low-quality center childcare. 
 
-To preview our analysis, we present gender differences in outcomes in Table~\ref{tab:proportion-table-ranksign}. We report the proportion of outcomes, by category, for which males outperform females (we have multiple outcome measures in each category which we explain in greater detail below). These proportions are invariant to the scales used for individual measures. Under the null hypothesis of no difference in treatment effects by gender, the proportion of outcomes favoring any gender should be 50\%. We test this hypothesis for the control group and the treatment group separately to determine whether there is a baseline (control) gender difference and whether treatment affects this gender difference.
+To preview our analysis, we present effect sizes by gender in Table~\ref{tab:stdte}. We report the standardized treatment effect averaged across variables within an outcome category (we have multiple outcome measures in each category which we explain in greater detail below) separately for men and women. Across the variables in each category, we compare the distribution of effect sizes for men with that for women. To test this comparison, we use a Wilcoxon rank sum test to non-parametrically compare the distribution of standardized treatment effects.
 
-Pooling the two control groups, males have higher IQs, employment, enhanced parental labor income (through subsidized childcare), and are more likely to participate in criminal activity than females. They do better on an aggregate over all categories. Treatment reverses the gap between males and females in the pooled control group for achievement. All achievement measures favor males in the pooled control group, but favor females in the treatment group. Education is another outcome category for which treatment reverses the gender gap between treatment and a pooled control group. Males have higher educational attainment in the pooled control group with 66.7\% of the educational outcomes favoring males, although the result is not statistically significant. In the treatment group, however, only 11.1\% of the educational outcomes favor males. Treatment reverses the gap for an aggregate across all outcome categories and narrows the gap for employment.
+Across genders, the largest effect sizes appear for outcomes in IQ, achievement, crime, education, employment, and mental health. The effect sizes are significantly larger for women in achievement, crime, mental health, and across all outcomes. A companion paper, \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}, provides a cost-benefit analysis of ABC/CARE, which provides a monetized analogue these standardized treatment effects. While treatment effects tend to be more positive for females than for males, the outcomes in which men are more affected are also costlier, resulting in a larger rate of return for men relative to women.
 
 \begin{table}[H]
 \centering
 \caption{Standardized Treatment Effects by Outcome Category}
-\label{tab:proportion-table-ranksign}
+\label{tab:stdte}
 \begin{threeparttable}
 \input{output/abccare-category-stdtes-rs}
 \begin{tablenotes}
 \footnotesize
-\item Note: 
-\end{tablenotes}
-\end{threeparttable}
-\end{table}
-
-Table~\ref{tab:proportion-table} summarizes the gender gaps reported in Table~\ref{tab:proportion-table-ranksign}, as well as those for different childcare environments for control-group children. In the control group, the proportion of outcomes for which males do better than females is higher than 50\% for most of the categories, although not all are statistically significant. Exceptions include social-emotional skills, risky behavior, and crime, in which females surpass males.\footnote{Females commit fewer crimes and report less risky behavior in comparison to males.} Treatment reverses the gaps for achievement, education, employment, parental income, and overall outcomes. For controls who stay at home, females have slightly better health outcomes than males. The males who attend lower-quality childcare do not outperform females on any of the outcome categories associated with cognition, education, and induced parental labor income (through subsidy of childcare). These outcomes are concentrated relatively early in the life of a child, indicating an early-life disadvantage that enriched early childcare programs partially correct.
-
-\begin{table}[H]
-\centering
-\caption{Summary of Proportion of Outcomes Males $>$ Females by Home Status}
-\label{tab:proportion-table}
-\begin{threeparttable}
-\begin{footnotesize}
-\input{output/abccare-gendergaps-summarizingtable}
-\end{footnotesize}
-\begin{tablenotes}
-\footnotesize
-\item Note: This table summarizes comparison of gender gaps across outcome categories by different groups. A checkmark indicates that the proportion of outcomes in the corresponding category is larger than 50\%, meaning that males outperform females. A checkmark with an asterisk indicates that the proportion is significantly larger than 50\% at the 10\% level. A cross indicates that the proportion of outcomes is smaller than 50\%. A cross with an asterisk indicates that the proportion is significantly smaller than 50\% at the 10\% level. An equals sign indicates that the proportion is exactly 50\%. Column (1) is the difference between males and females in the full control group.  Column (2) is the difference between males and females in the control group only considering those who stayed at home. Column (3) is the difference between males and females in the control group only considering those who attended alternative childcare. Column (4) is the difference between males and females in the treatment group.
+\item Note: This table is constructed by calculating the standardized treatment effect for each variable similar to \citet{Katz_Kling_etal_2001_QJE}. Within outcome categories, we average these standardized treatment effects to produce the the average effect size. We test the distribution of the effect sizes within each outcome category using a Wilcoxon rank sum test. The number of outcomes in each category is reported in the second column. 
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
