--- a/sections/2_data.tex
+++ b/sections/2_data.tex
@@ -1,6 +1,6 @@
 We analyze a combined sample of the two closely related programs, ABC and CARE. Table~\ref{tab:abc-care-characteristics} summarizes their characteristics. Both interventions were implemented by researchers at the Frank Porter Graham Center (FPG) at the University of North Carolina Chapel Hill, and targeted children from disadvantaged families in the Chapel Hill area. ABC had four cohorts born between 1972 and 1977, and CARE had two cohorts born between 1978 and 1980. Eligibility was determined on the basis of the High Risk Index (HRI) developed for ABC and adapted for CARE \citep{Campbell_Wasik_etal_2008_ECRQ}. Components of the HRI include father's presence, parental employment, and participation in welfare with a higher score corresponding to more disadvantage.\footnote{See Appendix~\ref{app:eligibility-pop} for the full list of the determinants of HRI \citep{Ramey_Smith_1977_AJMD, Wasik_Ramey_etal_1990_CD, Ramey_Campbell_1991_childreninpoverty}.}
 
-Both interventions involved intensive center-based care for subjects in the treatment group starting at 8 weeks and continuing until age 5 before the children started kindergarten. Treatment-group subjects also received daily health screenings, diapers, and formula until 6 months. Control-group families received diapers and formula as well for the same period of time \citep{Wasik_Ramey_etal_1990_CD,Ramey_Campbell_1991_childreninpoverty}. Between ages 5 and 8, there was an additional component of treatment in which home visitors worked with children and their parents to tutor the children and to encourage families to be involved in their child's schooling.\footnote{In ABC, treatment status of this component was randomized. In CARE, all the subjects who received center-based care also received this school-age component.} We do not analyze this part of the treatment because previous work has found this component of the treatment to have no statistically significant effect \citep{Campbell_Ramey_etal_2002_ADS,Campbell_Conti_etal_2014_EarlyChildhoodInvestments}.
+Both interventions involved intensive center-based care for subjects in the treatment group starting at 8 weeks and continuing until age 5 before the children started kindergarten. Treatment-group subjects also received daily health screenings, diapers, and formula until 6 months. Control-group families received diapers and formula as well for the same period of time \citep{Wasik_Ramey_etal_1990_CD,Ramey_Campbell_1991_childreninpoverty}. Between ages 5 and 8, there was an additional component of treatment in which home visitors worked with children and their parents to tutor the children and to encourage families to be involved in their child's schooling. In ABC, treatment status of this component was randomized. In CARE, all the subjects who received center-based care also received this school-age component. We do not analyze this part of the treatment because previous work has found this component of the treatment to have no statistically significant effect \citep{Campbell_Ramey_etal_2002_ADS,Campbell_Conti_etal_2014_EarlyChildhoodInvestments}.
 
 \begin{table}[H]
 \centering
@@ -16,11 +16,11 @@ Both interventions involved intensive center-based care for subjects in the trea
 \end{threeparttable}
 \end{table}
 
-The pedagogical approach focused on developing language, cognition, and social-emotional skills. During ABC and CARE, the \textit{Learning Games} curriculum was developed and refined \citep{Sparling_Lewis_1979_BOOKLearninggamesFirstThree}. Other curricula emphasized child-led learning of skills important for future learning \citep{Conti_etal_2016_LongTermHealth}.
+The pedagogical approach focused on developing language, cognition, and social-emotional skills. During ABC and CARE, the \textit{Learning Games} curriculum was developed and refined \citep{Sparling_Lewis_1979_BOOKLearninggamesFirstThree}. Other curricula used in the program emphasized child-led learning of skills important for future learning \citep{Conti_etal_2016_LongTermHealth}. The teachers and classroom aids were trained continuously throughout the intervention. Researchers and child development experts at FPG observed the classroom interactions and relayed detailed feedback to the instructors \citep{Ramey-etal_2012-ABC}. 
+
+These aspects of the program relate to structural quality rather than process quality (daily experiences of the children) \citep{thomason2009measuring}. Aspects of structural quality, including low child-teacher ratios, small group sizes, and teacher education, are often associated with high process quality \citep{phillipsen1997prediction}. However, recent studies find that curricula and professional development are more highly correlated with process quality. This is especially true if the curricula and professional development are informed by knowledge of child development \citep{slot2015associations}. Although measures of process quality (e.g., measures of teacher-child interactions) are not available for the ABC/CARE subjects, the curricula and professional development offerings were exceedingly intensive, especially compared to standards of that era \citep{Ramey-etal_2012-ABC}. 
 
 CARE included an additional arm of treatment. Besides the services in Table~\ref{tab:abc-care-characteristics}, those in the treatment group also received home visiting from birth to age 5. Home visiting consisted of biweekly visits focusing on parental problem-solving skills. To individually test this home-visiting component, there was a third randomized group ($N=23$) that received only the home visiting component, but not center-based care.\footnote{\citet{Wasik_Ramey_etal_1990_CD}.} In light of previous analyses finding no effect of this component, we drop this last group from our analysis.\footnote{\citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} test and do not reject the hypothesis of no treatment effects for this additional component of CARE.} These analyses justify merging the treatment groups of ABC and CARE, even though that of CARE received the additional home-visiting component.\footnote{\citet{ABCCARE_Dataset}.} We henceforth analyze the samples as coming from a single ABC/CARE program.
-
-
 
 Table~\ref{tab:abccare-baseline} compares pre-program variables between experimental and gender groups. The only significant difference is seen in the HRI score, which is 1.78 points lower for males than for females. This indicates that males were slightly less advantaged at baseline. However, we do not account for multiple hypotheses meaning that with an $\alpha$ level of 10\%, we would expect, on average, one significant result out of ten hypotheses \citep{Romano_Wolf_2005_JASA}.\footnote{For a more detailed description of the sample's disadvantage, see Appendix~\ref{app:eligibility-pop}.}
 
@@ -42,7 +42,7 @@ Table~\ref{tab:abccare-baseline} compares pre-program variables between experime
 
 Randomization for ABC/CARE was conducted on child pairs matched on family background. Siblings and twins were jointly randomized into either treatment or control groups. For siblings, this occurred when two siblings were close enough in age such that both of them were eligible for the program. Pairing was based on the High Risk Index, as well as maternal education, maternal age, and gender of the subject.\footnote{We do not know the original pairs.} 
 
-ABC collected an initial sample of 121 subjects.\footnote{All providers of health care and social services (referral agencies) in the area of the ABC/CARE study were informed of the programs. They referred mothers whom they considered disadvantaged. Eligibility was corroborated before randomization. Our conversations with the program staff indicate that the encouragement from the referral agencies was such that most referred mothers attended and agreed to participate in the initial randomization \citep{Ramey-etal_2012-ABC}.} We characterize each missing observation in Appendix~\ref{appendix:randomization}.\footnote{In Appendix~\ref{appendix:estimates}, we document that our estimates are robust when we adjust for missing data using standard weighting (matching) methods described in Appendix~\ref{app:method_partialobs}.} 22 subjects in ABC did not stay in the program through age 5. Dropouts are evenly balanced across treatments and controls. They are primarily related to the health of the child and the mobility of families rather than any dissatisfaction with the program. The 22 dropouts include four children who died, four children who left the study because their parents moved, and two children who were diagnosed as developmentally delayed. Details are in Table~\ref{table:abccompromises}. Everyone offered the program was randomized to either treatment or control. All eligible families agreed to participate. Dropping out occurs \emph{after} randomization. We conduct the same analysis for the CARE sample, although there were not as many compromises as for the ABC sample. 
+ABC collected an initial sample of 121 subjects.\footnote{All providers of health care and social services (referral agencies) in the area of the ABC/CARE study were informed of the programs. They referred mothers whom they considered disadvantaged. Eligibility was corroborated before randomization. Our conversations with the program staff indicate that the encouragement from the referral agencies was such that most referred mothers attended and agreed to participate in the initial randomization \citep{Ramey-etal_2012-ABC}.} We characterize each missing observation in Appendix~\ref{appendix:randomization}. In Appendix~\ref{appendix:estimates}, we document that our estimates are robust when we adjust for missing data using standard weighting (matching) methods described in Appendix~\ref{app:method_partialobs}. 22 subjects in ABC did not stay in the program through age 5. The number of dropouts is evenly balanced across treatments and controls. They are primarily related to the health of the child and the mobility of families rather than any dissatisfaction with the program. The 22 dropouts include four children who died, four children who left the study because their parents moved, and two children who were diagnosed as developmentally delayed. Details are in Table~\ref{table:abccompromises}. Everyone offered the program was randomized to either treatment or control. All eligible families agreed to participate. Dropping out occurs \emph{after} randomization. We conduct the same analysis for the CARE sample, although there were far fewer dropouts and no compromised randomization. 
 
 \subsection{Control Group Substitution}
 
@@ -67,6 +67,12 @@ Note: Panel (a) displays the cumulative distribution function of enrollment in a
 
 Figure~\ref{fig:treatsubcare} shows the cumulative distribution of the proportion of time in the first five years that control subjects were enrolled in alternatives. Figure~\ref{fig:proportion-alt-pre} shows the dynamics of enrollment. Those who enroll generally stay enrolled. As control-group children age, they are more likely to enter childcare (see Appendix~\ref{app:control-subbb}).
 
-Children in the control group who are enrolled in alternative early childcare programs are less economically disadvantaged at baseline compared to children who stay at home. Disadvantage is measured by maternal education, maternal IQ, Apgar scores, and the High Risk Index defining ABC/CARE eligibility. Children who attend low-quality alternative care have fewer siblings. On average, they are children of mothers who are more likely to be working at baseline (statistically significant at 10\%). Parents of girls are much more likely to use alternative center childcare if assigned to the control group. Table~\ref{table:controlsubscharacteristics} tests differences across these variables between children in the control group who attended and who did not attend alternative childcare. If the subject is a boy across control group substitution, the father is more likely to be present.
+Children in the control group who are enrolled in alternative early childcare programs are less economically disadvantaged at baseline compared to children who stay at home. Disadvantage is measured by maternal education, maternal IQ, Apgar scores, and the High Risk Index defining ABC/CARE eligibility. Children who attend low-quality alternative care have fewer siblings. On average, they are children of mothers who are more likely to be working at baseline (statistically significant at 10\%). Parents of girls are much more likely to use alternative center childcare if assigned to the control group. Table~\ref{table:controlsubscharacteristics} tests differences across these variables between children in the control group who attended and who did not attend alternative childcare. The only significant difference in observed characteristics is whether the mother works. For children attending alternative care, the mother is more likely to work. This is especially the case for female subjects. For male subjects, the labor supply of the mothers is statistically the same with 14\% of the mothers working for boys who stay at home. This is consistent with a higher percentage of fathers being present when the subject is male.
 
-While most of the alternative childcare centers received federal subsidies and were subject to the federal regulations of the era, they were relatively low-quality compared to ABC/CARE. Appendix~\ref{appendix:tetanus} discusses the federal standards of that day. See \citet{Department-of-Health_1968_DayCareRequirements,NCGA_1971_House-Bill-100,Ramey-et-al_1977_Intro-to-ABC,Ramey_Campbell_1979_SR,Ramey_McGinness_etal_1982_Abecedarianapproach, Burchinal_Campbell_etal_1997_CD}. When we compare ABC/CARE treatment to these alternatives, ABC/CARE has substantial treatment effects. Further, as we argue below, parents perceived that ABC/CARE was superior to the alternatives. The access of control-group children to alternative programs creates both a problem of substitution bias \citep{Heckman_1992_randomization,Heckman_Hohmann_etal_2000_QJE, Kline_Walters_2016_QJE}. and an opportunity. With the heterogeneous experiences of the control-group subjects, we can compare the effect of an enriched treatment against home and low-quality center environments separately.
+While most of the alternative childcare centers received federal subsidies and were subject to the federal regulations of the era, they were relatively low-quality compared to ABC/CARE. These federal standards, however, did not include the same complexity of curricula and professional development as did ABC/CARE \citep{Burchinal_etal_1989_CD_Daycare-Pre-K-Dev}. Even along more measurable components, such as child-staff ratios, ABC/CARE far exceeded the highest state and federal standards followed by the alternative options. Appendix~\ref{appendix:tetanus} shows this and discusses the federal standards of that day. See \citet{Department-of-Health_1968_DayCareRequirements,NCGA_1971_House-Bill-100,Ramey-et-al_1977_Intro-to-ABC,Ramey_Campbell_1979_SR,Ramey_McGinness_etal_1982_Abecedarianapproach, Burchinal_Campbell_etal_1997_CD}.
+
+
+When we compare ABC/CARE treatment to these alternatives, ABC/CARE has substantial treatment effects. Further, as we argue below, parents perceived that ABC/CARE was superior to the alternatives. The access of control-group children to alternative programs creates both a problem of substitution bias \citep{Heckman_1992_randomization,Heckman_Hohmann_etal_2000_QJE, Kline_Walters_2016_QJE}. and an opportunity. With the heterogeneous experiences of the control-group subjects, we can compare the effect of an enriched treatment against home and low-quality center environments separately.
+
+
+
