as sent to jorge

--- a/sections/Comments/ToDo.tex
+++ b/sections/Comments/ToDo.tex
@@ -118,7 +118,7 @@ However, I have three major concerns about the paper as it currently stands. I w
 \begin{description}
 \item[Major concern 1]  Participation in center-based care in the control group is not randomized. As the paper is currently written, it seems like the treatment-control/home care and treatment-control/center care inferences are as credible as the treatment-full control group inferences. These inferences are not created equally. The treatment-full control group inference is based on randomization; sample sizes are small, but absent selective attrition, randomization should address both selection on observables and selection on unobservables. By contrast, the treatment-control/home care and treatment-control/center care comparisons only adjust for selection on observables. I think that this needs to be made very clear early on in the paper (well before page 14, where it is first mentioned in the current draft), and appropriate caveats on conclusions drawn from these inferences given throughout the text. \change{Qualify these results more and justify matching more.} \info{Common concern 1}
 \item[Major concern 2] There is too much focus on the sign and statistical significance of effects, and too little on magnitudes. In part, this is an artifact of the statistics (and corresponding inference) that the authors have chosen to highlight:  proportions of positive effects within categories. Given that the interest is in gender differences in treatment effects, shouldn't magnitudes matter as well?  I think that there is an easy solution to this:  instead of focusing on proportions, why not focus on standardized treatment effects within categories, as in the Kling, Liebman, and Katz (2007) evaluation of MTO or the Finkelstein, et al. (2012) evaluation of the Oregon Health Insurance Experiment?  Alternatively, monetization of the effects (e.g., to calculate cost-benefit ratios) would provide an omnibus magnitude, but it looks like you've already done this in another paper. \change{Discuss these methods.} \info{Common concerns 3 and 5}
-\item[Major concern 3:]  There is inadequate reconciliation with existing literature. \info{Common concern 5} There is (to me) a glaring lack of reconciliation with several key papers. First, and most importantly, Anderson (2008) estimates the impacts of a number of model early interventions---including ABC---correcting for multiple inference. This paper is not even cited, despite the fact that it is well known in this literature (cited 590 times in Google Scholar at the time this report was written). The authors really must cite this paper, and describe what they do differently from it; if gender differences in ABC have already been explored, what is the contribution? Do the authors arrive at different conclusions?  If so, why? Second, given that gender differences in ABC have indeed previously been documented, the attempt to estimate effects relative to specific counterfactuals (home care, center-based care) becomes a more important aspect of the paper's potential contribution. With this in mind, I think that the authors must really reconcile with Kline and Walters (2016) as well as Feller et al. (2016), who do the same thing (but in different ways) in the context of the Head Start Impact Study. Are they taking a similar approach? If not, does taking the approach of, for example, Kline and Walters (2016), matter for the conclusions?  Approach aside, the authors seem to be doing a similar dissection of counterfactual care options in their companion paper (Garcia et al. 2017). Is the innovation of the current paper simply that you're doing it by gender?  Why is this important?  \change{Address previous studies.}
+\item[Major concern 3:]  There is inadequate reconciliation with existing literature. \info{Common concern 5} There is (to me) a glaring lack of reconciliation with several key papers. First, and most importantly, Anderson (2008) estimates the impacts of a number of model early interventions---including ABC---correcting for multiple inference. This paper is not even cited, despite the fact that it is well known in this literature (cited 590 times in Google Scholar at the time this report was written). The authors really must cite this paper, and describe what they do differently from it; if gender differences in ABC have already been explored, what is the contribution? Do the authors arrive at different conclusions? \textbf{We use different data and factors. He does not explore gender differences compared to different counterfactuals.} If so, why? Second, given that gender differences in ABC have indeed previously been documented, the attempt to estimate effects relative to specific counterfactuals (home care, center-based care) becomes a more important aspect of the paper's potential contribution. With this in mind, I think that the authors must really reconcile with Kline and Walters (2016) as well as Feller et al. (2016), who do the same thing (but in different ways) in the context of the Head Start Impact Study. Are they taking a similar approach? If not, does taking the approach of, for example, Kline and Walters (2016), matter for the conclusions?  \textbf{Both use HSIS, which had a multi-site randomization. This allows for the use weakly exogenous instruments or stratification.} Approach aside, the authors seem to be doing a similar dissection of counterfactual care options in their companion paper (Garcia et al. 2017). Is the innovation of the current paper simply that you're doing it by gender?  Why is this important?  \change{Address previous studies.}
 \end{description}
 
 \textbf{Minor comments}
